--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 3.6.1-pre
 homepage: https://github.com/TerminalStudio/xterm.dart
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.10.0"
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   convert: ^3.0.0
